--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8"/>
     <title>Pomodoro</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="themes.css" />
     <script type="text/javascript" src="pomodoro.js"></script>
   </head>
 
