--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8"/>
-    <title>Pomodoro</title>
+    <title>Pomodoro Time!</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="themes.css" />
     <script type="text/javascript" src="pomodoro.js"></script>
