--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Pomodoro Time!</title>
+    <link rel="icon" href="assets/checkmark.png" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="themes.css" />
     <script type="text/javascript" src="pomodoro.js"></script>
